modify forked to support opsschool GCP environment
we supported ubuntu 14 (changing yum stuff to apt-get) also added apt-get update as it failed without
imported key for ubuntu (again ubuntu)
we hardoded unicorn proxy to local host, we sau some reslove host issues
we locked mysql2 gem to a specific version in the app gem file
revered q command  from bundle.rb to v 0.2.9
bumped spree version to 3.0.7

--- a/templates/nginx-unicorn.conf.erb
+++ b/templates/nginx-unicorn.conf.erb
@@ -1,5 +1,5 @@
 upstream unicorn {
-  server <%= node['spree']['app'] %>.<%= node['spree']['domain'] %>:8080;
+  server localhost:8080;
 }
 
 server {
